[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/UI/Tab_popup.gd" type="Script" id=1]

[node name="Tab_popup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.627451, 0.639216, 0.690196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="OptionsMenu"]
margin_top = 497.0
margin_right = 95.0
margin_bottom = 511.0
text = "Tab Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="OptionsMenu"]
margin_top = 515.0
margin_right = 95.0
margin_bottom = 535.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLevel" type="Button" parent="OptionsMenu"]
margin_top = 539.0
margin_right = 95.0
margin_bottom = 559.0
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="OptionsMenu"]
margin_top = 563.0
margin_right = 95.0
margin_bottom = 583.0
text = "settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_right = 100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options"]
margin_top = 438.0
margin_right = 200.0
margin_bottom = 452.0
text = "Options"
align = 1

[node name="Label2" type="Label" parent="Options"]
margin_top = 456.0
margin_right = 200.0
margin_bottom = 487.0
text = "Master Volume
"

[node name="MasterSlider" type="HSlider" parent="Options"]
margin_top = 491.0
margin_right = 200.0
margin_bottom = 507.0
min_value = -45.0
max_value = 0.0

[node name="FX" type="Label" parent="Options"]
margin_top = 511.0
margin_right = 200.0
margin_bottom = 542.0
text = "FX Volume
"

[node name="FXSlider" type="HSlider" parent="Options"]
margin_top = 546.0
margin_right = 200.0
margin_bottom = 562.0
min_value = -45.0
max_value = 0.0

[node name="Music" type="Label" parent="Options"]
margin_top = 566.0
margin_right = 200.0
margin_bottom = 597.0
text = "Music Volume
"

[node name="MusicSlider" type="HSlider" parent="Options"]
margin_top = 601.0
margin_right = 200.0
margin_bottom = 617.0
min_value = -45.0
max_value = 0.0

[node name="Button" type="Button" parent="Options"]
margin_top = 621.0
margin_right = 200.0
margin_bottom = 641.0
text = "Back"

[connection signal="pressed" from="OptionsMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="OptionsMenu/RestartLevel" to="." method="_on_RestartLevel_pressed"]
[connection signal="pressed" from="OptionsMenu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="value_changed" from="Options/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Options/FXSlider" to="." method="_on_FXSlider_value_changed"]
[connection signal="value_changed" from="Options/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="Options/Button" to="." method="_on_Button_pressed"]
